fixed some rows